# vvzapi

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  alembic.ini  justfile  k6.js  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-please-manifest.json
.github/workflows/: build.yml  format.yml
alembic/: env.py
alembic/meta_versions/: 357b241a4250_add_flagged.py  c28cde0a90db_move_over_cleanup_table.py  fd345d2b7d78_httpcache_table.py
alembic/versions/: 015faf174cb5_add_rescraped_at.py  04802db549e2_init.py  0d7e1a32934b_init.py  0df0314ed5c3_remove_golden_owl.py  131e43fd572f_add.py  16d7816424e7_init.py  1aef6b22e4e2_add_unit_type.py  286444bb10a5_initial_models.py  28d83f5b9096_add_indices_for_key_columns_like_title_.py  2c332002ee3f_remove_unitchanges.py  3b1a337a1fe5_move_over_cleanup_table.py  40a2a6a4691a_golden_owl.py  469a31ddd9b4_rename_lectures_directory.py  483a6b2ca502_init.py  497216f8f2a4_completed_semesters.py  4a9111aae04a_materialized_table_for_section_paths.py  76c252644a17_rename_code_to_number_add_dept_level.py  77024f6fd0cc_make_departments_plural.py  7724efb4d256_init.py  788bae6774a2_init_v0_2_1.py  85ac8b35c9f8_make_lecturer_title_optional.py  a007ce80b4cb_init.py  a0298d933d96_init.py  aa860aba0a9f_add_indices_to_links.py  b6c0d8f67343_delete_units_with_null_numbers.py  b6f18216363f_add.py  bf994b267478_add_unit_id_to_course_pk.py  c87f2be09719_add_coursereview_ratings.py  d32f8010e741_add_more_lecturer_infos.py  d8610f775ae8_init.py  dc051fb507e8_add_unit_changes_table.py  dd4c19c96b3f_materialized_departments.py  e5534c6064e2_groups_signup_end.py  f5c19471f37c_add.py  ffc22d4f857d_add.py
api/: .dockerignore  .gitignore  db.py  env.py  main.py  models.py
api/models/: __init__.py  course.py  learning_unit.py  lecturer.py  section.py
api/new_models/: __init__.py  abschnitt_daten.py  abschnitt_element.py  abschnitts_referenz.py  belegungsserie_ort.py  lehrneinheit.py  lehrnveranstalter.py  lehrveranstaltungen.py  lerneinheit.py  section.py  semester.py  veranstalter.py
api/routers/: v0_router.py  v1_router.py  v2_router.py
api/routers/v0/: courses.py  lecturers.py  misc.py  sections.py  units.py
api/routers/v1/: courses.py  lecturers.py  misc.py  sections.py  units.py
api/static/: index.html  llms.txt  opensearch.xml  robots.txt  tw.css
api/templates/: base.html  base_search.html  guide.html  results.html  root_search.html  unit_detail.html
api/util/: db.py  influxdb.py  materialize.py  parse_query.py  prometheus.py  pydantic_type.py  sections.py  sitemap.py  templates.py  types.py  unit_filter.py  version.py  vvz_types.py  webhook.py
deploy/: Dockerfile.api  Dockerfile.scraper  api_entrypoint.sh  scraper_entrypoint.sh
scraper/: env.py  main.py  pipelines.py  settings.py
scraper/spiders/: lecturers.py  lectures.py  new_lectures.py  old_lectures.py  ratings.py  units.py
scraper/types/: mappings.py
scraper/util/: cleanup_scrapy.py  db_httpcache.py  delete_cached.py  difference.py  keymap.py  log_error.py  logging.py  progress.py  regex_rules.py  scrapercache.py  table.py  types.py  url.py
(+20 files in other folders)
