[project]
name = "vvzapi"
version = "1.9.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "jinja2-htmlmin>=1.0.1",
    "jinja2-pluralize>=0.3.0",
    "jinjax>=0.63",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyparsing>=3.3.2",
    "rapidfuzz>=3.14.3",
    "scrapy>=2.14.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.31",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.2",
    "djlint>=1.36.4",
    "ruff>=0.15.0",
]

[tool.basedpyright]
typeCheckingMode = "all"
include = ["api", "scraper"]
reportDeprecated = false
reportUninitializedInstanceVariable = false
reportUnusedCallResult = false
allowedUntypedLibraries = ["jinja2_pluralize", "slowapi", "jinjax"]

[tool.djlint]
profile = "django"
ignore = "H021"
format_js=true
line_break_after_multiline_tag=true
max_blank_lines=1
ignore_case=true
